--- a/index.html
+++ b/index.html
@@ -4,7 +4,219 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Britlex</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,600;1,400;1,500;1,600&display=swap"
+      rel="stylesheet"
+    />
   </head>
-  <body></body>
+  <body>
+    <header class="header">
+      <div class="container">
+        <div class="header__inner">
+          <a class="header__logo logo" href="#">
+            <img class="logo__img" src="images/Britlex.svg" alt="Britlex" />
+          </a>
+          <button class="header__nav-toggle">
+            <img src="images/menu.svg" alt="menu" />
+          </button>
+          <nav class="header__nav">
+            <ul class="menu">
+              <li class="menu__item">
+                <a class="menu__link" href="#">Home</a>
+              </li>
+              <li class="menu__item">
+                <a class="menu__link" href="#">Skils</a>
+              </li>
+              <li class="menu__item">
+                <a class="menu__link" href="#">About us</a>
+              </li>
+              <li class="menu__item">
+                <a class="menu__link" href="#">Prichig</a>
+              </li>
+              <li class="menu__item">
+                <a class="menu__link" href="#">Contacts</a>
+              </li>
+            </ul>
+            <ul>
+              <li class="menu__item right">
+                <a class="menu__link" href="#"> Let's Talk</a>
+              </li>
+            </ul>
+          </nav>
+        </div>
+      </div>
+    </header>
+    <main class="index-main">
+      <section class="hero">
+        <div class="container">
+          <div class="hero__inner">
+            <strong class="hero__title">Learn Any Foreign Language </strong>
+            <img class="hero__logo" src="images/lamp.jpg" alt="lamp" />
+            <p class="hero__info">
+              With our teachers who write a program for each student, you will
+              be able to make your first sketch after the first lesson.
+            </p>
+            <a class="btn hero__link" href="#">Get ststed</a>
+          </div>
+          <div class="hero__col">
+            <img
+              src="images/Learning languages-bro 1.jpg"
+              alt="languages-bro"
+            />
+          </div>
+        </div>
+      </section>
+      <section class="skils">
+        <div class="container">
+          <h2 class="skils__title">Skils</h2>
+          <div class="skils__speak">
+            <img class="skils__img" src="images/speaking.jpg" alt="speaking" />
+            <h3 class="skils__title">Speaking</h3>
+            <p class="skils__text">
+              Improve your English skills and confidence. Live classes and
+              interactive lessons online. 20% extra free for a limited time only
+            </p>
+            <p class="skils__text">
+              Learn English online and improve your skills through our
+              high-quality courses and resources – all designed for adult
+              language learners.
+            </p>
+            <a class="btn skils__link" href="#">Learn more</a>
+          </div>
+          <div class="skils__writing">
+            <img class="skils__img" src="images/writing.jpg" alt="writing" />
+            <h3 class="skils__title">Writing</h3>
+            <p class="skils__text">
+              One of the most important and extensive areas of natural science,
+              the science that studies substances, also their composition
+            </p>
+            <a class="btn skils__link" href="#">Learn more</a>
+          </div>
+          <div class="skils__reading">
+            <img class="skils__img" src="images/reading.jpg" alt="reading" />
+            <h3 class="skils__title">Reading</h3>
+            <p class="skils__text">
+              perception and response actions of the user resulting from the use
+              and/or upcoming use of the product, system or service
+            </p>
+            <a class="btn skils__link" href="#">Learn more</a>
+          </div>
+          <div class="skils__listening">
+            <h3 class="skils__title">Listening</h3>
+            <p class="skils__text">
+              Here you can find activities to practise your listening skills.
+              Listening will help you to improve your understanding
+            </p>
+            <a class="btn skils__link" href="#">Learn more</a>
+            <img
+              class="skils__img"
+              src="images/listening.jpg"
+              alt="listening"
+            />
+          </div>
+        </div>
+      </section>
+      <section class="about">
+        <div class="container">
+          <div class="about__inner">
+            <h2 class="about__title">About Us</h2>
+            <p class="about__info">
+              The model offers a framework for discussing problems related to
+              the user's experience, as well as possible ways and means of
+              solving them. Application development begins at the top level
+              (strategy), where the future software product is described quite
+              abstractly from the point of view of the expectations of both
+              users and the customer.
+            </p>
+            <ul>
+              <li class="about__item">
+                <h2>800</h2>
+                <p class="about__text">Pupils</p>
+              </li>
+              <li class="about__item">
+                <h2>18</h2>
+                <p class="about__text">Teachers</p>
+              </li>
+              <li class="about__item">
+                <h2>6</h2>
+                <p class="about__text">Fogeign languages</p>
+              </li>
+            </ul>
+          </div>
+          <div about__img>
+            <img src="images/flag.jpg" alt="flag" />
+          </div>
+        </div>
+      </section>
+      <section class="priching">
+        <div class="container">
+          <h2 class="priching__title">Priching</h2>
+          <ul>
+            <li class="priching__item">
+              <img src="images/Online test-bro 1.jpg" alt="test-bro" />
+              <h3 class="priching__title-secondery">
+                Self-study online course
+              </h3>
+              <p class="priching__text">
+                Start learning English online in live classes with qualified EC
+                teachers and students from all over the world.
+              </p>
+              <p>&pound;5.99 per month</p>
+            </li>
+            <li class="priching__item">
+              <img src="images/Lesson-bro 1.jpg" alt="Lesson-bro" />
+              <h3 class="priching__title-secondery"></h3>
+              <p class="priching__text">
+                Interactive group classes with expert teachers. Free 7-day tria
+              </p>
+              <p>&pound;12.99 per month</p>
+            </li>
+            <li class="priching__item">
+              <img src="images/Webinar-bro 2.jpg" alt="Webinar-bro" />
+              <h3 class="priching__title-secondery"></h3>
+              <p class="priching__text">
+                Online one-to-one English tutoring – enjoy our first session for
+                only $1
+              </p>
+              <p class="priching__text-secondery">&pound;20.99 per month</p>
+            </li>
+          </ul>
+        </div>
+      </section>
+      <section class="contact">
+        <div class="container">
+          <div class="contact__img">
+            <img src="images/boy.jpg" alt="boy" />
+          </div>
+          <div class="contact__info">
+            <h2 class="contact__title">Contacts Us</h2>
+            <p class="contact__text">
+              Discover your current English level by taking our free online
+              English test.Sign up to our newsletter for learning tips and free
+              resources
+            </p>
+            <form>
+              <input type="text" placeholder="Enter Your E-mail" />
+              <button>Subscribe</button>
+            </form>
+          </div>
+        </div>
+      </section>
+    </main>
+    <footer>
+      <div class="container">
+        <a class="foorer__logo" href="#">
+          <img class="logo__img" src="images/Britlex.svg" alt="Britlex" />
+        </a>
+        <p class="footer__item">
+          <span>Terms and Conditions</span>
+          <span> Privacy Policy</span>
+          <span>Cookie Policy</span>
+        </p>
+      </div>
+    </footer>
+  </body>
 </html>
